finalize endpoints and swaggerdocs
